<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:gravity="center"
                android:padding="10dp"
                android:text="序号"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#4169E1"
                android:gravity="center"
                android:padding="10dp"
                android:text="评价内容"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:gravity="center"
                android:padding="10dp"
                android:text="评价分数"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divide_grey_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="#AAAAAA"
                android:gravity="center"
                android:padding="10dp"
                android:text="1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#4169E1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/evaluation_content_1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:background="#EEEE00"
                android:gravity="center"
                android:padding="10dp"
                android:text="点击评价"
                android:textColor="@color/red" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divide_grey_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="#AAAAAA"
                android:gravity="center"
                android:padding="10dp"
                android:text="2"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#4169E1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/evaluation_content_2"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:background="#EEEE00"
                android:gravity="center"
                android:padding="10dp"
                android:text="点击评价"
                android:textColor="@color/red" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divide_grey_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="#AAAAAA"
                android:gravity="center"
                android:padding="10dp"
                android:text="3"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#4169E1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/evaluation_content_3"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:background="#EEEE00"
                android:gravity="center"
                android:padding="10dp"
                android:text="点击评价"
                android:textColor="@color/red" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divide_grey_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="#AAAAAA"
                android:gravity="center"
                android:padding="10dp"
                android:text="4"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#4169E1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/evaluation_content_4"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:background="#EEEE00"
                android:gravity="center"
                android:padding="10dp"
                android:text="点击评价"
                android:textColor="@color/red" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/divide_grey_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="#AAAAAA"
                android:gravity="center"
                android:padding="10dp"
                android:text="5"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#4169E1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/evaluation_content_5"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:background="#EEEE00"
                android:gravity="center"
                android:padding="10dp"
                android:text="点击评价"
                android:textColor="@color/red" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>